// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcTextFilter > should display properly with the given props 1`] = `
<div
  class="ec-text-filter"
  data-test="ec-text-filter"
>
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!--v-if-->
    <input
      class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--has-left-icon"
      data-test="ec-input-field__input ec-mock ec-tooltip-mock"
      id="ec-input-field-1"
      type="text"
    />
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
      data-test="ec-input-field__left-icon-wrapper"
    >
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__left-icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-search"
        />
      </svg>
    </div>
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
      data-test="ec-input-field__icon-wrapper"
    >
      <!--v-if-->
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`EcTextFilter > should render close icon depends on modelValue 1`] = `
<div
  class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
  data-test="ec-input-field__icon-wrapper"
>
  <!--v-if-->
  <svg
    class="ec-icon ec-input-field__icon"
    data-test="ec-input-field__icon"
    height="20"
    width="20"
  >
    <use
      xlink:href="#ec-simple-close"
    />
  </svg>
</div>
`;

exports[`EcTextFilter > should render with a sensitive class when isSensitive prop is set to true 1`] = `
<div
  class="ec-text-filter"
  data-test="ec-text-filter"
>
  <div
    class="ec-input-field"
    data-test="ec-input-field"
  >
    <!--v-if-->
    <input
      class="ec-input-field__input ec-input-field__input--bg-gray-8 ec-input-field__input--has-icon ec-input-field__input--has-left-icon my-sensitive-content-test-class"
      data-test="ec-input-field__input ec-mock ec-tooltip-mock"
      id="ec-input-field-1"
      type="text"
    />
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--left"
      data-test="ec-input-field__left-icon-wrapper"
    >
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__left-icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-search"
        />
      </svg>
    </div>
    <div
      class="ec-input-field__icon-wrapper ec-input-field__icon-wrapper--right"
      data-test="ec-input-field__icon-wrapper"
    >
      <!--v-if-->
      <svg
        class="ec-icon ec-input-field__icon"
        data-test="ec-input-field__icon"
        height="20"
        width="20"
      >
        <use
          xlink:href="#ec-simple-close"
        />
      </svg>
    </div>
    <!--v-if-->
  </div>
</div>
`;
